--- a/templates/result.html
+++ b/templates/result.html
@@ -104,8 +104,8 @@
 <body>
     <div class="result-container">
         <h1>Transaction Detection Result</h1>
-        <p class="result {{ 'fraud' if fraud == 'Fraud Transaction' else 'normal' }}">
-            {{ 'Fraudulent Transaction' if fraud == 'Fraud Transaction' else 'Normal Transaction' }}
+        <p class="result {{ 'fraud' if fraud == 'Fraud' else 'normal' }}">
+            {{ 'Fraudulent Transaction' if fraud == 'Fraud' else 'Normal Transaction' }}
         </p>
 
         <a href="/">Home</a>
