--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome - Credit Card Fraud Detection</title>
+    <title>SmartShield</title>
     <style>
         body {
             font-family: 'Roboto', Arial, sans-serif;
@@ -74,8 +74,8 @@
 </head>
 <body>
     <div class="welcome-container">
-        <h1>Welcome to Fraud Detection</h1>
-        <p>Your tool for identifying fraudulent transactions efficiently and securely.</p>
+        <h1>Welcome to SmartShield</h1>
+        <p>Tool for identifying fraudulent transactions efficiently and securely.</p>
         <a href="/form" class="start-button">Check Transaction</a>
     </div>
 </body>
